update code samples and rust logic
